--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     (function () {
       const params  = new URLSearchParams(location.search);
       const imgUrl  = params.get("img");
-      const fallback = "https://picsum.photos/800/500?blur=1"; // sicheres HTTPS-Fallback
+      const fallback = "assets/haha.png";
 
       const stage1 = document.getElementById("stage1");
       const stage2 = document.getElementById("stage2");
@@ -74,3 +74,4 @@
   </script>
 </body>
 </html>
+
