--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </div>
 
   <div class="card fade" id="stage2" aria-hidden="true">
-    <h2>😂 Haha, verarscht!</h2>
+    <h2>Ya kalb</h2>
     <img id="prankImg" alt="Spaßbild wird geladen …" loading="eager">
     <p class="err" id="imgErr">Konnte das Bild nicht laden 😅</p>
     <p class="hint">Alles nur Spaß. Keine echte Zahlung.</p>
@@ -74,4 +74,5 @@
   </script>
 </body>
 </html>
+
 
